[package]
name = "date_picker"
version = "0.1.0"
authors = ["mexiQQ <ljw040426@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { path = "../.." }
iced_native = { path = "../../native" }
iced_graphics = { path = "../../graphics" }
chrono = "0.4"