[package]
name = "date_picker"
version = "0.1.0"
authors = ["mexiQQ <ljw040426@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/hecrj/iced", rev = "94af34884667e78e231fb1904ae3e9fa785c9a7a" }
iced_native = { git = "https://github.com/hecrj/iced/", rev = "94af34884667e78e231fb1904ae3e9fa785c9a7a", path="native" }
iced_graphics = { git = "https://github.com/hecrj/iced", rev = "94af34884667e78e231fb1904ae3e9fa785c9a7a", path="graphics" }
chrono = "0.4"

#iced = { path = "../.." }
#iced_native = { path = "../../native" }
#iced_graphics = { path = "../../graphics" }
#chrono = "0.4"